# line-search-dfo

./: .gitignore  README.md  algorithm.m  check_stopping_criteria.m  create_constants.m  plotstate.m  start.m  theta.m
c/: CMakeLists.txt  main.cpp
c/alg/: Ellipse.cpp  Ellipse.h  algorithm.cpp  algorithm.h
c/base/: Bounds.cpp  Bounds.h  PolynomialBasis.cpp  PolynomialBasis.h  Shifter.cpp  Shifter.h  TrustRegion.cpp  TrustRegion.h
c/dfo/: Lagrange.cpp  Lagrange.h
c/fcn/: Utils.cpp  Utils.h
c/script/: driver.cpp
c/sys/: Config.cpp  Config.h  Plotter.cpp  Plotter.h
c/utils/: math_utils.cpp  math_utils.h
defense/: .gitignore  Makefile  defense.tex  notes.tex  notes.txt  presentation.bib
dfo/: dfo_create.m  dfo_create_evaluator.m  dfo_increment_radius.m
functions/: a_line.m  circle.m  eq_constraints_1.m  eq_constraints_2.m  ineq_constraints_1.m  ineq_constraints_2.m  ineq_constraints_3.m  line_y_eq_x_p_1.m  objective_1.m  objective_2.m  positive_definite_quadratic.m  rosenbrock.m
java/: FindOutputLines.java
linear_paper/: .gitignore  bibliography.bib  bibliography.bib~  convex_constraints.tex  definitions.tex  environment.tex  main.aux  main.bbl  main.blg  main.tex  main_old.aux  main_old.bbl  main_old.blg  main_old.dvi  main_old.tex  thesis.bib
matlab/: are_colinear.m  check_stopping_criteria.m  create_results.m  mk_plt.m  penalize.m  restore_feasibility.m  start.m
nondom/: nondom_add.m
outline/: bibliography.bib  outline.tex  outline3.tex  scrapts.tex
paper/: .gitignore  bibliography.bib  commands.tex  compile.sh  convex.tex  dissertation.tex  (+10 more)
(+257 files in other folders)
